# riji-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_GUIDE.md  README.en.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: test.yml
docs/: PRD.md  acceptance.md  data-egress.md  deployment.md  feishu-permissions.yaml  hermes-integration.md  privacy.md
docs/architecture/: modules.md  mvp-architecture.md  packs.md
scripts/: pre-commit  privacy_scan.py
src/riji_agent/: __init__.py  chat.py  config.py  config_cli.py  (+6 more)
tests/: test_agent_loop.py  test_agent_runtime_layer.py  test_assets.py  test_audit.py  test_calendar_provider.py  test_calendar_service.py  test_config.py  test_deepseek_provider.py  test_demo_quickstart.py  test_drafts_polish.py  test_drafts_service.py  test_drafts_template.py  test_drafts_tool.py  test_drafts_writer.py  test_e2e_acceptance.py  test_feishu_permissions_doc.py  test_health.py  test_hermes_api.py  test_hermes_bridge.py  test_hermes_calendar_evolution.py  test_hermes_draft_confirm.py  test_hermes_gateway.py  test_hermes_installer.py  test_hermes_routing.py  test_im_layer.py  test_index_cli.py  test_index_robustness.py  test_index_scheduler.py  test_init_doctor_cli.py  test_journal_index.py  test_journal_parser.py  test_local_chat.py  test_memory.py  test_model_provider_layer.py  test_model_provider_registry.py  test_open_source_docs.py  test_packs.py  test_paths.py  test_periods.py  test_persona_context.py  (+15 more)
(+92 files in other folders)
