[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "riji-agent"
version = "0.1.0"
description = "Local privacy and data boundary for the Riji journal agent."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "pyyaml>=6.0,<7.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
riji-agent = "riji_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/riji_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "smoke: end-to-end MVP smoke test over the HTTP app (run with: pytest -m smoke)",
]
